--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,6 +17,7 @@ services = "4.4.2"
 crashlytics = "3.0.2"
 coil = "2.7.0"
 firebaseFirestoreKtx = "25.1.3"
+playServicesLocation = "21.3.0"
 
 [libraries]
 accompanist-systemuicontroller = { module = "com.google.accompanist:accompanist-systemuicontroller", version.ref = "accompanistSystemuicontroller" }
@@ -43,9 +44,11 @@ firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "fir
 firebase-crashlytics = { module = "com.google.firebase:firebase-crashlytics" }
 firebase-auth = { module = "com.google.firebase:firebase-auth-ktx"}
 firebase-firestore = { module = "com.google.firebase:firebase-firestore"}
+firebase-database = { module = "com.google.firebase:firebase-database-ktx" }
 
 coil = {module = "io.coil-kt:coil-compose", version.ref = "coil"}
 firebase-firestore-ktx = { group = "com.google.firebase", name = "firebase-firestore-ktx", version.ref = "firebaseFirestoreKtx" }
+play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "playServicesLocation" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
