--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SafeRoad"
         tools:targetApi="31">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAWpSpUVYMHNdWKt0e1rTdDWZwULaqJCvc" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
