--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,7 @@ crashlytics = "3.0.2"
 coil = "2.7.0"
 firebaseFirestoreKtx = "25.1.3"
 playServicesLocation = "21.3.0"
+runtimeLivedata = "1.7.8"
 
 [libraries]
 accompanist-systemuicontroller = { module = "com.google.accompanist:accompanist-systemuicontroller", version.ref = "accompanistSystemuicontroller" }
@@ -46,9 +47,14 @@ firebase-auth = { module = "com.google.firebase:firebase-auth-ktx"}
 firebase-firestore = { module = "com.google.firebase:firebase-firestore"}
 firebase-database = { module = "com.google.firebase:firebase-database-ktx" }
 
+maps-compose = { module = "com.google.maps.android:maps-compose", version = "4.1.1" }
+play-services-maps = { module = "com.google.android.gms:play-services-maps", version = "18.2.0" }
+accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version = "0.34.0" }
+
 coil = {module = "io.coil-kt:coil-compose", version.ref = "coil"}
 firebase-firestore-ktx = { group = "com.google.firebase", name = "firebase-firestore-ktx", version.ref = "firebaseFirestoreKtx" }
 play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "playServicesLocation" }
+androidx-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "runtimeLivedata" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
